--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2 id="bemvindo">Seja bem vindo ao</h2>
     <h1 id="coursify">Coursify.Me Enterprise</h1>
 
-    <p id="subtext">Although the bobcat is rarely seen, it is the most common wildcat in North America.</p>   
+    <p id="subtext">Somos a melhor empresa de cursos online. Tenha acesso ao melhor conteúdo.</p>   
     
     <input id="tab-1" type="radio" name="tab" class="sign-in" checked><a href="#" onClick="mostrar('sign-in-htm')" id="log">Login</a>   
     <input id="tab-2" type="radio" name="tab" class="sign-up"><a href="#" onClick="mostrar('sign-up-htm')" id="cad">Cadastro</a>    
@@ -95,9 +95,6 @@
     </div> 
     <figcaption></figcaption>
  </figure>
-
-<div class="bola1"></div>
-<div class="bola2"></div>
 
 
 <!--------Script----------------------------------------------------------------------------------------------------------------->
